# SimFound_v2

./: README.md  pyproject.toml
docs/: SETD2-H3K36@HPC.ipynb  SETD2-SAM-DreamWorks-1.ipynb  SETD2-SAM-DreamWorks.ipynb  SETD2-SAM-Pixar-1.ipynb  SETD2-SAM-complexed-DreamWorks.ipynb  SETD2-SAM-complexed.ipynb  SETD2-h3K36@HPC_launcher.py  SETD2-open_analysis.ipynb  SETD2-ssK36@HPC_launcher.py  SETD2_HPC.ipynb  SETD2_analysis@Pixar.ipynb  SFv2_template.ipynb  SimFound_v2.ipynb  Untitled.ipynb  conf.py  documentation.rst  guide.rst  h3K36-Pixar.ipynb  index.rst  log_protonation.txt  main.rst  peptides-DreamWorks.ipynb  projects.rst  protein_design.rst  protein_design_SystemSetup.rst  source.rst  ssK36-DreamWorks.ipynb  tools.rst  visualization.ipynb
docs/.ipynb_checkpoints/: CALB-DES-checkpoint.ipynb
docs/notebook/: SimFound_v2.ipynb  Untitled.ipynb
docs/notebooks/: MsAcT-pacman.ipynb  MsAcT_ALL@Pixar.ipynb  SETD2-SAM-DreamWorks-2.ipynb  SETD2-SAM-Local.ipynb  SETD2-SAM-Pixar.ipynb  SETD2-SAM.ipynb  SETD2-SAM@HPC.ipynb  SETD2_analysis-Pixar.ipynb  SETD2_analysis.ipynb  (+4 more)
source/: Decorators.py  Discretize.py  Featurize.py  MSM.py  MSM_dep.py  Protocols.py  SETD2-HPC.py  SETD2_protocols.py  Trajectory.py  Visualization.py  classes.py  conf.py  index.rst  input.xml  main.py  main_v2.py  plots.py  plots_lite.py  plots_mod.py  requirements.txt  tools.py  tools_plots.py
src/: Discretize.py  Featurize.py  MSM.py  SETD2-HPC.ipynb  SETD2_protocols.py  SETD2_test_script.sh  Trajectory.py  Visualization.py  gromacs_peptides.sh  plots.py  plots_lite.py  tools.py
(+95 files in other folders)
